// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ci-workflow generator connected to nxCloud circleci pipeline should match snapshot 1`] = `
"version: 2.1

orbs:
  nx: nrwl/nx@1.6.2

env:
  NX_BATCH_MODE: true

jobs:
  main:
    environment:
      # Configure the JVM and Gradle to avoid OOM errors
      _JAVA_OPTIONS: '-Xmx3g'
      GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2'
    docker:
      - image: cimg/openjdk:21.0-node
    steps:
      - checkout

      # This enables task distribution via Nx Cloud
      # Run this command as early as possible, before dependencies are installed
      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
      # Uncomment this line to enable task distribution
      # - run: ./nx start-ci-run --distribute-on="3 linux-medium-jvm" --stop-agents-after="check"

      - nx/set-shas:
          main-branch-name: 'main'

      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected.
      # Change from check to check-ci if you turn on the atomizer. Learn more: https://nx.dev/nx-api/gradle#splitting-e2e-tests.
      - run:
          command: ./nx affected --base=$NX_BASE --head=$NX_HEAD -t assemble check
      # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ai
      - run:
          command: ./nx fix-ci
          when: always

workflows:
  version: 2

  ci:
    jobs:
      - main
"
`;

exports[`ci-workflow generator connected to nxCloud github pipeline should match snapshot 1`] = `
"name: CI

on:
  push:
    branches:
      - main
  pull_request:

permissions:
  actions: read
  contents: read

env:
  NX_BATCH_MODE: true

jobs:
  main:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
          filter: tree:0

      # This enables task distribution via Nx Cloud
      # Run this command as early as possible, before dependencies are installed
      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
      # Uncomment this line to enable task distribution
      # - run: ./nx start-ci-run --distribute-on="3 linux-medium-jvm" --stop-agents-after="check"

      - name: Set up JDK 21 for x64
        uses: actions/setup-java@v4
        with:
          java-version: '21'
          distribution: 'temurin'
          architecture: x64

      - name: Setup Gradle
        uses: gradle/actions/setup-gradle@v3

      - uses: nrwl/nx-set-shas@v4

      # # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected.
      # # Change from check to check-ci if you turn on the atomizer. Learn more: https://nx.dev/nx-api/gradle#splitting-tests
      - run: ./nx affected -t assemble check
      # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ai
      - run: ./nx fix-ci
        if: always()
"
`;

exports[`ci-workflow generator not connected to nxCloud circleci pipeline should match snapshot 1`] = `
"version: 2.1

orbs:
  nx: nrwl/nx@1.6.2

env:
  NX_BATCH_MODE: true

jobs:
  main:
    environment:
      # Configure the JVM and Gradle to avoid OOM errors
      _JAVA_OPTIONS: '-Xmx3g'
      GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2'
    docker:
      - image: cimg/openjdk:21.0-node
    steps:
      - checkout

      # This enables task distribution via Nx Cloud
      # Run this command as early as possible, before dependencies are installed
      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
      # Connect your workspace by running "nx connect" and uncomment this line to enable task distribution
      # - run: ./nx start-ci-run --distribute-on="3 linux-medium-jvm" --stop-agents-after="check"

      - nx/set-shas:
          main-branch-name: 'main'

      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected.
      # Change from check to check-ci if you turn on the atomizer. Learn more: https://nx.dev/nx-api/gradle#splitting-e2e-tests.
      - run:
          command: ./nx affected --base=$NX_BASE --head=$NX_HEAD -t assemble check
      # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ai
      - run:
          command: ./nx fix-ci
          when: always

workflows:
  version: 2

  ci:
    jobs:
      - main
"
`;

exports[`ci-workflow generator not connected to nxCloud github pipeline should match snapshot 1`] = `
"name: CI

on:
  push:
    branches:
      - main
  pull_request:

permissions:
  actions: read
  contents: read

env:
  NX_BATCH_MODE: true

jobs:
  main:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
          filter: tree:0

      # This enables task distribution via Nx Cloud
      # Run this command as early as possible, before dependencies are installed
      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
      # Connect your workspace by running "nx connect" and uncomment this line to enable task distribution
      # - run: ./nx start-ci-run --distribute-on="3 linux-medium-jvm" --stop-agents-after="check"

      - name: Set up JDK 21 for x64
        uses: actions/setup-java@v4
        with:
          java-version: '21'
          distribution: 'temurin'
          architecture: x64

      - name: Setup Gradle
        uses: gradle/actions/setup-gradle@v3

      - uses: nrwl/nx-set-shas@v4

      # # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected.
      # # Change from check to check-ci if you turn on the atomizer. Learn more: https://nx.dev/nx-api/gradle#splitting-tests
      - run: ./nx affected -t assemble check
      # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ai
      - run: ./nx fix-ci
        if: always()
"
`;